fixed some responsiveness with home page in landscape mode on smaller devices

--- a/client/src/styles/pages/Home.css
+++ b/client/src/styles/pages/Home.css
@@ -328,3 +328,51 @@
     font-size: 0.9rem;
   }
 }
+
+
+@media (max-width: 1200px) and (orientation: landscape) {
+  .home-title {
+    font-size: 3.5rem;
+  }
+  .home-subtitle {
+    font-size: 1.75rem;
+  }
+  .home_photo_image {
+    width: 50%;
+  }
+  #home-quote-div {
+    width: 95%;
+  }
+  #home-quote-h3 {
+    font-size: 1.35rem;
+  }
+  #home-random-quote {
+    font-size: 1.1rem;
+  }
+
+
+}
+
+@media (max-width: 1000px) and (orientation: landscape) {
+  .home-title {
+    font-size: 2.5rem;
+    margin: 0.5rem;
+  }
+  .home-subtitle {
+    font-size: 1.5rem;
+    margin: 0.5rem;
+  }
+  .welcome-message {
+    margin: 0.5rem;
+  }
+  .home_photo {
+    margin: 0.5rem;
+  }
+  .home_photo_image {
+    width: 35%;
+    margin-top: 0;
+  }
+  #home-quote-div {
+    display: none;
+  }
+}
